--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/Docusaurus.git"
+    "url": "https://github.com/hysios/docusaurus.git"
   },
   "scripts": {
     "prettier": "prettier --config ../.prettierrc --write \"**/*.js\"",
